# agenda-rouen

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.github/workflows/: deploy-lambda.yml
events/: schedule.json
frontend/: next.config.ts  package-lock.json
frontend/public/: manifest.json  sw.js
frontend/src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
frontend/src/components/: CategoryFilter.tsx  CdnErrorBanner.tsx  DateFilter.tsx  EventCard.tsx  EventList.tsx  EventModal.tsx  Header.tsx  SearchBar.tsx  ServiceWorkerRegistration.tsx  ThemeProvider.tsx
frontend/src/lib/: api.ts  filters.ts  sample-events.ts  types.ts
scripts/: generate-requirements.sh  test_classify.py  test_scrape.py
src/agenda_rouen/: __init__.py  handler.py  models.py
src/agenda_rouen/classifier/: __init__.py  llm.py
src/agenda_rouen/scrapers/: __init__.py  base.py  jds.py  openagenda.py  rouen_on_est.py
src/agenda_rouen/storage/: __init__.py  s3.py
tests/: test_classifier.py  test_handler.py  test_jds.py  test_models.py  test_openagenda.py  test_rouen_on_est.py  test_storage.py
