[project]
name = "agenda-rouen"
version = "0.1.0"
description = "Agrégateur d'événements de Rouen et environs — scraping, classification LLM, et publication statique sur S3"
readme = "README.md"
authors = [
    { name = "thomasquiviger", email = "thomas@la-forge.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.11",
    "boto3>=1.38",
    "python-dotenv>=1.2.2",
    "google-genai>=1.68.0",
    "scrapling>=0.4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.26",
    "ruff>=0.11",
    "mypy>=1.15",
    "moto[s3]>=5.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
